added section on validation set results

--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -1,5 +1,5 @@
 ---
-title: "Fragmenting molecules for quantum chemistry torsion scans"
+title: "Capturing non-local effects when fragmenting molecules"
 keywords:
   - forcefield
   - force-field
