finished first draft of results

--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -1,5 +1,5 @@
 ---
-title: "Capturing non-local effects when fragmenting molecules"
+title: "Capturing non-local effects when fragmenting molecules for quantum chemical torsion scans"
 keywords:
   - forcefield
   - force-field
