--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -56,11 +56,11 @@ author_info:
     name: Lee-Ping Wang
     initials: LPW
     orcid: 0000-0003-3072-9946
-    twitter: null
+    #twitter: null
     email: leeping@ucdavis.edu
     affiliations:
       - Department of Chemistry, University of California, Davis, Califnornia 95616 USA
-    funders: null
+    #funders: null
   -
     github: davidlmobley
     name: David L Mobley
